--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
                 <artifactId>hibernate-core</artifactId>
                 <version>6.6.1.Final</version>
             </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
 
 </project>
